@@ -38,7 +38,7 @@
 /* Show menu */
 #nav li.over ul { left:0px; }
 #nav li.over ul ul { left:-10000px; }
-#nav li.over ul li.over ul { left:100px; }
+#nav li.over ul li.over ul { left:60px; }
 
 #nav ul li {  padding:0; }
 #nav ul li a { background:#660000; color:#FF0000 !important; }
